[package]
name = "recoverable_errors"
version = "0.1.0"
authors = ["Mengsen-W <mengsen_wang@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
# switch from unwinding to aborting upon a panic
panic = 'abort'
