[package]
name = "simd"
version = "0.1.0"
authors = ["Mengsen <mengsen_wang@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
path = "src/auto_vector.rs"
name = "auto_vector"

[[bin]]
path = "src/main.rs"
name = "main"